--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=pdf-invoice-generator
+cdn.url=https://cdn.amazon-s3.com
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/my_fancy_pdf_invoices_database
+spring.datasource.username=root
+spring.datasource.password=
